Add animated 404 error page and i18n type generation
Introduces a new animated 404 error page with a finance emoji vortex and custom styling. Adds a script to generate TypeScript types from i18n JSON files and updates i18n types and English translations for consistency. Refactors the English and French home pages to use new components and calculators. Updates the styleguide to showcase the new error page and includes the corresponding CSS.

--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -5,20 +5,20 @@
     "month": "month",
     "Continue": "Continue",
     "Register": "Register",
-    "or": "or"
+    "or": "or "
   },
   "calculator": {
-    "Loan": "Loan",
+    "Loan": "Borrow",
     "Duration": "Duration",
     "interest": "Interest",
     "from": "from",
     "Fees": "Fees",
     "With insurance": "With insurance",
-    "Monthly instalment": "Monthly instalment",
+    "Monthly instalment": "Monthly payment",
     "of which insurance": "of which insurance",
     "Apply": "Apply",
     "Invest": "Invest",
-    "amountError": "Please enter an amount between 1'000 and 1'000'000.",
+    "amountError": "Please enter an amount between 1,000 and 1,000,000.",
     "monthError1": "Please enter a value between ",
     "monthError2": " and ",
     "monthError3": " months.",
@@ -26,7 +26,7 @@
   },
   "auth": {
     "Choose your role": "Choose your role",
-    "How would you like to use Cashare": "How would you like to use Cashare",
+    "How would you like to use Cashare": "How would you like to use Cashare?",
     "Apply for a loan": "Apply for a loan",
     "Please enter your email address": "Please enter your email address.",
     "Please enter your password": "Please enter your password.",
@@ -35,29 +35,29 @@
     "Verify that": "Verify that",
     "is a valid email address": "is a valid email address.",
     "Email validation": "Email validation",
-    "Receive email": "You have received an email from us which you can use to complete the registration. Look now in your mailbox and carefully read the email.",
-    "We have": "We sent this email to the following address: ",
-    "Sent": "",
-    "Not received": "If you have not received the email, or the email address is not correct, you can correct in the field and have the email sent again.",
-    "Resend": "Re-send",
-    "Send validation email": "Sent Validation Email",
-    "The email was": "The email for the validation was sent to ",
+    "Receive email": "You will receive an email from us to complete your registration. Please check your inbox and read the email carefully.",
+    "We have": "This email was sent to ",
+    "Sent": ".",
+    "Not received": "If you haven't received the email or the address is incorrect, you can correct it above and request a new email.",
+    "Resend": "Resend",
+    "Send validation email": "Validation email sent",
+    "The email was": "The validation email was sent to ",
     "Resent": ".",
-    "Should Receive": "You should receive the email one minute at most.",
+    "Should Receive": "You should receive the email within a minute.",
     "Two-Factor Authentication": "Two-Factor Authentication",
     "Enter auth code": "For added security, please enter the authentication code from your 2FA app.",
     "Lost your device": "Lost your device?",
-    "Check TFA": "Check Two-Factor Authentication Guide",
-    "request": "request a reset."
+    "Check TFA": "Check the two-factor authentication guide",
+    "request": "request a reset"
   },
   "validation": {
     "Please enter an amount": "Please enter an amount.",
-    "Please enter an amount greater than or equal to 1'000": "Please enter an amount greater than or equal to 1'000.",
-    "Please enter an amount less than or equal to": "Please enter an amount less than or equal to ",
+    "Please enter an amount greater than or equal to 1'000": "Please enter an amount of at least 1,000.",
+    "Please enter an amount less than or equal to": "Please enter an amount of at most ",
     "ein": "",
-    "Please enter a runtime greater than or equal to 1": "Please enter a runtime greater than or equal to 1.",
-    "Please enter a runtime less than or equal to": "Please enter a runtime less than or equal to ",
-    "Please enter a term": "Please enter a term.",
-    "not more than 1": "You can capture no more than one loan application."
+    "Please enter a runtime greater than or equal to 1": "Please enter a duration of at least 1.",
+    "Please enter a runtime less than or equal to": "Please enter a duration of at most ",
+    "Please enter a term": "Please enter a duration.",
+    "not more than 1": "You cannot submit more than one loan application."
   }
 }
