Add TopBar, i18n route mapping, and 404 translations
Introduces a new TopBar component with styles and integrates it into the layout. Adds i18n route mapping utilities (lib/i18n/routes.ts) and translation scripts (translate.ts, translate-watch.ts) for automated translation management. Updates StripeNav to use locale-aware URLs, extends translation types and JSON files with error/404 keys, and localizes the 404 page. Also refines error page styles and updates the styleguide to preview the new error page layout.

--- a/lib/i18n/locales/de.json
+++ b/lib/i18n/locales/de.json
@@ -59,5 +59,12 @@
     "Please enter a runtime less than or equal to": "Geben Sie bitte eine Laufzeit kleiner oder gleich ",
     "Please enter a term": "Geben Sie bitte eine Laufzeit ein.",
     "not more than 1": "Sie können nicht mehr als einen Darlehensantrag erfassen."
+  },
+  "error": {
+    "pageTitle": "404 - Seite nicht gefunden | Cashare",
+    "title": "Seite nicht gefunden",
+    "description": "Ups! Diese Seite ist uns leider entwischt. Aber keine Sorge, Ihr Geld ist bei uns sicher.",
+    "backHome": "Zur Startseite",
+    "contact": "Kontakt"
   }
 }
