Revamp loan application UI and update page content
Introduces a unified, configurable LoanApplicationForm component for all loan types and registers it in the manifest. Refactors multiple modals and chart islands to use centralized i18n translation logic. Updates page hero and section content for improved clarity and consistency, removes back-link navigation from subpage heroes, and adjusts CTAs and subtitles for investor and loan pages.

--- a/lib/i18n/locales/de.json
+++ b/lib/i18n/locales/de.json
@@ -24,6 +24,57 @@
     "monthError3": " Monate ein.",
     "duration": "Laufzeit"
   },
+  "yieldCalculator": {
+    "title": "Renditerechner",
+    "subtitle": "Berechnen Sie Ihre potenzielle Rendite als Anleger auf der Cashare Plattform.",
+    "amount": "Anlagebetrag",
+    "duration": "Laufzeit",
+    "interestRate": "Zinssatz",
+    "calculation": "Ihre Rendite",
+    "yield": "Bruttoertrag",
+    "platformFee": "Plattformgebühr",
+    "netYield": "Nettoertrag",
+    "amountError": "Bitte geben Sie einen Betrag zwischen 100 und 1'000'000 ein.",
+    "monthsError": "Bitte geben Sie eine Laufzeit zwischen 1 und 60 ein.",
+    "interestError": "Bitte geben Sie einen Zinssatz zwischen 1 und 15 ein."
+  },
+  "charts": {
+    "ratingsTitle": "Verteilung der Kreditratings: Abwägung von Risiken und Chancen",
+    "overview": "Überblick",
+    "rating": "Rating",
+    "share": "Anteil",
+    "financedProjects": "Finanzierte Kreditprojekte",
+    "members": "Anzahl Mitglieder",
+    "volumeTitle": "Total angefragtes Kreditvolumen",
+    "million": "Mio"
+  },
+  "modals": {
+    "emailValidationTitle": "E-Mail bestätigen",
+    "emailValidationMessage": "Wir haben Ihnen eine E-Mail zur Bestätigung Ihrer Adresse gesendet.",
+    "emailValidationCheckInbox": "Bitte überprüfen Sie Ihren Posteingang und klicken Sie auf den Bestätigungslink.",
+    "emailValidationCheckSpam": "Überprüfen Sie auch Ihren Spam-Ordner.",
+    "emailValidationResend": "E-Mail erneut senden",
+    "emailValidationResending": "Wird gesendet...",
+    "emailValidationResent": "E-Mail wurde erneut gesendet!",
+    "emailValidationClose": "Schliessen",
+    "errorTitle": "Fehler",
+    "errorDefaultMessage": "Ein Fehler ist aufgetreten. Bitte versuchen Sie es erneut.",
+    "errorClose": "Schliessen",
+    "errorRetry": "Erneut versuchen",
+    "roleSelectionTitle": "Was möchten Sie tun?",
+    "roleSelectionMessage": "Bitte wählen Sie, wie Sie Cashare nutzen möchten.",
+    "roleSelectionInvestTitle": "Anlegen",
+    "roleSelectionInvestDescription": "Investieren Sie in Kredite und erzielen Sie attraktive Renditen.",
+    "roleSelectionBorrowTitle": "Kredit beantragen",
+    "roleSelectionBorrowDescription": "Beantragen Sie einen Privatkredit oder KMU-Kredit.",
+    "twoFactorTitle": "Zwei-Faktor-Authentifizierung",
+    "twoFactorMessage": "Bitte geben Sie den Code aus Ihrer Authenticator-App ein.",
+    "twoFactorPlaceholder": "6-stelliger Code",
+    "twoFactorSubmit": "Bestätigen",
+    "twoFactorSubmitting": "Wird überprüft...",
+    "twoFactorCancel": "Abbrechen",
+    "twoFactorError": "Ungültiger Code. Bitte versuchen Sie es erneut."
+  },
   "auth": {
     "Choose your role": "Wählen Sie Ihre Rolle",
     "How would you like to use Cashare": "Wie möchten Sie Cashare benutzen",
