--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -24,6 +24,57 @@
     "monthError3": " months.",
     "duration": "Duration"
   },
+  "yieldCalculator": {
+    "title": "Yield Calculator",
+    "subtitle": "Calculate your potential return as an investor on the Cashare platform.",
+    "amount": "Investment Amount",
+    "duration": "Duration",
+    "interestRate": "Interest Rate",
+    "calculation": "Your Return",
+    "yield": "Gross Yield",
+    "platformFee": "Platform Fee",
+    "netYield": "Net Yield",
+    "amountError": "Please enter an amount between 100 and 1,000,000.",
+    "monthsError": "Please enter a duration between 1 and 60.",
+    "interestError": "Please enter an interest rate between 1 and 15."
+  },
+  "charts": {
+    "ratingsTitle": "Distribution of Credit Ratings: Balancing Risks and Opportunities",
+    "overview": "Overview",
+    "rating": "Rating",
+    "share": "Share",
+    "financedProjects": "Financed projects",
+    "members": "Members",
+    "volumeTitle": "Total requested credit volume",
+    "million": "M"
+  },
+  "modals": {
+    "emailValidationTitle": "Confirm Your Email",
+    "emailValidationMessage": "We've sent you an email to confirm your address.",
+    "emailValidationCheckInbox": "Please check your inbox and click the confirmation link.",
+    "emailValidationCheckSpam": "Also check your spam folder.",
+    "emailValidationResend": "Resend Email",
+    "emailValidationResending": "Sending...",
+    "emailValidationResent": "Email resent successfully!",
+    "emailValidationClose": "Close",
+    "errorTitle": "Error",
+    "errorDefaultMessage": "An error occurred. Please try again.",
+    "errorClose": "Close",
+    "errorRetry": "Try Again",
+    "roleSelectionTitle": "What would you like to do?",
+    "roleSelectionMessage": "Please choose how you want to use Cashare.",
+    "roleSelectionInvestTitle": "Invest",
+    "roleSelectionInvestDescription": "Invest in loans and earn attractive returns.",
+    "roleSelectionBorrowTitle": "Apply for a loan",
+    "roleSelectionBorrowDescription": "Apply for a personal or SME loan.",
+    "twoFactorTitle": "Two-Factor Authentication",
+    "twoFactorMessage": "Please enter the code from your authenticator app.",
+    "twoFactorPlaceholder": "6-digit code",
+    "twoFactorSubmit": "Confirm",
+    "twoFactorSubmitting": "Verifying...",
+    "twoFactorCancel": "Cancel",
+    "twoFactorError": "Invalid code. Please try again."
+  },
   "auth": {
     "Choose your role": "Choose your role",
     "How would you like to use Cashare": "How would you like to use Cashare?",
