--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -24,6 +24,57 @@
     "monthError3": " mois.",
     "duration": "Durée"
   },
+  "yieldCalculator": {
+    "title": "Calculateur de rendement",
+    "subtitle": "Calculez votre rendement potentiel en tant qu'investisseur sur la plateforme Cashare.",
+    "amount": "Montant d'investissement",
+    "duration": "Durée",
+    "interestRate": "Taux d'intérêt",
+    "calculation": "Votre rendement",
+    "yield": "Rendement brut",
+    "platformFee": "Frais de plateforme",
+    "netYield": "Rendement net",
+    "amountError": "Veuillez entrer un montant entre 100 et 1'000'000.",
+    "monthsError": "Veuillez entrer une durée entre 1 et 60.",
+    "interestError": "Veuillez entrer un taux d'intérêt entre 1 et 15."
+  },
+  "charts": {
+    "ratingsTitle": "Répartition des notations de crédit: équilibre entre risques et opportunités",
+    "overview": "Aperçu",
+    "rating": "Rating",
+    "share": "Part",
+    "financedProjects": "Projets de prêts financés",
+    "members": "Nombre de membres",
+    "volumeTitle": "Volume total de crédit demandé",
+    "million": "M"
+  },
+  "modals": {
+    "emailValidationTitle": "Confirmez votre e-mail",
+    "emailValidationMessage": "Nous vous avons envoyé un e-mail pour confirmer votre adresse.",
+    "emailValidationCheckInbox": "Veuillez vérifier votre boîte de réception et cliquer sur le lien de confirmation.",
+    "emailValidationCheckSpam": "Vérifiez également votre dossier spam.",
+    "emailValidationResend": "Renvoyer l'e-mail",
+    "emailValidationResending": "Envoi en cours...",
+    "emailValidationResent": "E-mail renvoyé avec succès!",
+    "emailValidationClose": "Fermer",
+    "errorTitle": "Erreur",
+    "errorDefaultMessage": "Une erreur s'est produite. Veuillez réessayer.",
+    "errorClose": "Fermer",
+    "errorRetry": "Réessayer",
+    "roleSelectionTitle": "Que souhaitez-vous faire?",
+    "roleSelectionMessage": "Veuillez choisir comment vous voulez utiliser Cashare.",
+    "roleSelectionInvestTitle": "Investir",
+    "roleSelectionInvestDescription": "Investissez dans des prêts et obtenez des rendements attractifs.",
+    "roleSelectionBorrowTitle": "Demander un crédit",
+    "roleSelectionBorrowDescription": "Demandez un crédit privé ou PME.",
+    "twoFactorTitle": "Authentification à deux facteurs",
+    "twoFactorMessage": "Veuillez saisir le code de votre application d'authentification.",
+    "twoFactorPlaceholder": "Code à 6 chiffres",
+    "twoFactorSubmit": "Confirmer",
+    "twoFactorSubmitting": "Vérification...",
+    "twoFactorCancel": "Annuler",
+    "twoFactorError": "Code invalide. Veuillez réessayer."
+  },
   "auth": {
     "Choose your role": "Sélectionnez votre rôle",
     "How would you like to use Cashare": "Comment souhaitez-vous utiliser Cashare",
