Refactor calculators to use centralized i18n translations
Removed inline translation objects from calculator components and switched to using the shared i18n translation function and locale files. Added new calculator-related translation keys to all locale JSON files and updated types. Improved input formatting and validation, and made minor CSS adjustments for better layout and numeric input display.

--- a/lib/i18n/locales/de.json
+++ b/lib/i18n/locales/de.json
@@ -22,7 +22,25 @@
     "monthError1": "Bitte geben Sie einen Wert zwischen ",
     "monthError2": " und ",
     "monthError3": " Monate ein.",
-    "duration": "Laufzeit"
+    "duration": "Laufzeit",
+    "privateTab": "Privatkredit",
+    "smeTab": "KMU-Darlehen",
+    "loanAmount": "Darlehenssumme",
+    "withInsurance": "Mit Versicherung?",
+    "monthlyRate": "Mtl. Rate",
+    "insuranceIncluded": "davon Versicherung",
+    "applyLoan": "Darlehen beantragen",
+    "applyNote": "BEANTRAGEN SIE IHREN PERSÖNLICHEN KREDIT IN WENIGEN MINUTEN",
+    "disclaimer": "Die effektiven Werte hängen von Ihrem Betrag, der Laufzeit und dem Zinssatz Ihres Darlehens ab. Sobald Sie den Antrag eingereicht haben, können wir Ihnen ein individuelles Angebot unterbreiten.",
+    "monthsError": "Bitte geben Sie eine Laufzeit zwischen 1 und 60 Monate ein.",
+    "smeTitle": "KMU-Darlehen Rechner",
+    "totalInterest": "Zinskosten",
+    "totalAmount": "Gesamtbetrag",
+    "to": "bis",
+    "smeApplyLoan": "KMU-Darlehen beantragen",
+    "smeAmountError": "Bitte geben Sie einen Betrag zwischen 10'000 und 1'000'000 ein.",
+    "smeMonthsError": "Bitte geben Sie eine Laufzeit zwischen 3 und 60 Monate ein.",
+    "smeDisclaimer": "Die effektiven Werte hängen von Ihrem Betrag, der Laufzeit und dem Zinssatz Ihres Darlehens ab."
   },
   "yieldCalculator": {
     "title": "Renditerechner",
