--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -22,7 +22,25 @@
     "monthError1": "Please enter a value between ",
     "monthError2": " and ",
     "monthError3": " months.",
-    "duration": "Duration"
+    "duration": "Duration",
+    "privateTab": "Private Loan",
+    "smeTab": "SME Loan",
+    "loanAmount": "Loan amount",
+    "withInsurance": "With insurance?",
+    "monthlyRate": "Monthly rate",
+    "insuranceIncluded": "of which insurance",
+    "applyLoan": "Apply for loan",
+    "applyNote": "APPLY FOR YOUR PERSONAL LOAN IN A FEW MINUTES",
+    "disclaimer": "The actual values depend on your amount, the term and the interest rate of your loan. Once you have submitted your application, we can make you an individual offer.",
+    "monthsError": "Please enter a duration between 1 and 60 months.",
+    "smeTitle": "SME Loan Calculator",
+    "totalInterest": "Interest costs",
+    "totalAmount": "Total amount",
+    "to": "to",
+    "smeApplyLoan": "Apply for SME loan",
+    "smeAmountError": "Please enter an amount between 10,000 and 1,000,000.",
+    "smeMonthsError": "Please enter a duration between 3 and 60 months.",
+    "smeDisclaimer": "The actual values depend on your amount, the term and the interest rate of your loan."
   },
   "yieldCalculator": {
     "title": "Yield Calculator",
