--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -22,7 +22,25 @@
     "monthError1": "Veuillez saisir une valeur comprise entre ",
     "monthError2": " et ",
     "monthError3": " mois.",
-    "duration": "Durée"
+    "duration": "Durée",
+    "privateTab": "Prêt privé",
+    "smeTab": "Prêt PME",
+    "loanAmount": "Montant du prêt",
+    "withInsurance": "Avec assurance?",
+    "monthlyRate": "Mensualité",
+    "insuranceIncluded": "dont assurance",
+    "applyLoan": "Demander un prêt",
+    "applyNote": "DEMANDEZ VOTRE PRÊT PERSONNEL EN QUELQUES MINUTES",
+    "disclaimer": "Les valeurs effectives dépendent de votre montant, de la durée et du taux d'intérêt de votre prêt. Une fois votre demande soumise, nous pourrons vous faire une offre individuelle.",
+    "monthsError": "Veuillez saisir une durée entre 1 et 60 mois.",
+    "smeTitle": "Calculateur prêt PME",
+    "totalInterest": "Coûts d'intérêts",
+    "totalAmount": "Montant total",
+    "to": "à",
+    "smeApplyLoan": "Demander un prêt PME",
+    "smeAmountError": "Veuillez saisir un montant entre 10'000 et 1'000'000.",
+    "smeMonthsError": "Veuillez saisir une durée entre 3 et 60 mois.",
+    "smeDisclaimer": "Les valeurs effectives dépendent de votre montant, de la durée et du taux d'intérêt de votre prêt."
   },
   "yieldCalculator": {
     "title": "Calculateur de rendement",
