Add card link styles and i18n for Borrowers/Investors
Introduces a new 'learn more' card link to Borrowers and Investors cards, with supporting styles and hover effects. Adds 'learnMore' to i18n translations (de, en, fr) and updates type definitions. Updates the styleguide with a new Links section and demonstrates card and footer link styles. Removes hover elevation effects from various cards for a flatter UI. Refines slider thumb appearance and interaction.

--- a/lib/i18n/locales/de.json
+++ b/lib/i18n/locales/de.json
@@ -5,7 +5,8 @@
     "month": "Monat",
     "Continue": "Weiter",
     "Register": "Registrieren",
-    "or": "oder "
+    "or": "oder ",
+    "learnMore": "Mehr erfahren"
   },
   "calculator": {
     "Loan": "Leihen",
