--- a/lib/i18n/locales/en.json
+++ b/lib/i18n/locales/en.json
@@ -5,7 +5,8 @@
     "month": "month",
     "Continue": "Continue",
     "Register": "Register",
-    "or": "or "
+    "or": "or ",
+    "learnMore": "Learn more"
   },
   "calculator": {
     "Loan": "Borrow",
