--- a/lib/i18n/locales/fr.json
+++ b/lib/i18n/locales/fr.json
@@ -5,7 +5,8 @@
     "month": "mois",
     "Continue": "Continuer",
     "Register": "S'inscrire",
-    "or": "ou"
+    "or": "ou",
+    "learnMore": "En savoir plus"
   },
   "calculator": {
     "Loan": "Emprunter",
