Add sliding highlight to StripeNav and update footer layout
Introduces a sliding highlight pill effect for the StripeNav navigation bar, including new state management and event handlers in StripeNav.tsx and corresponding CSS. Refactors the footer layout for improved responsiveness and updates the German translation for 'withInsurance'.

--- a/lib/i18n/locales/de.json
+++ b/lib/i18n/locales/de.json
@@ -27,7 +27,7 @@
     "privateTab": "Privatkredit",
     "smeTab": "KMU-Darlehen",
     "loanAmount": "Darlehenssumme",
-    "withInsurance": "Mit Versicherung?",
+    "withInsurance": "Versicherung",
     "monthlyRate": "Mtl. Rate",
     "insuranceIncluded": "davon Versicherung",
     "applyLoan": "Darlehen beantragen",
